--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "run-s start:remove build:images watch:eleventy",
     "start:remove": "node onStart.mjs",
-    "watch:eleventy": "npx @11ty/eleventy --serve --incremental",
+    "watch:eleventy": "npx @11ty/eleventy --serve --watch --incremental",
     "watch:parcel": "parcel watch --no-cache",
     "build": "run-s clean build:parcel build:images hash build:eleventy",
     "svg": "svg-symbol-sprite -i src/icons -o src/_includes/partials/sprite.svg -p ''",
